assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Raleway', sans-serif;
    color: white;
}

html {
    height: 100%;
} 

body {
    height: 100%;
    background-image: url("/assets/img/background.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.box {
    display: flex;
    justify-content: space-between;
}

.flex-container1 {
    display: flex;
    flex-direction: column;
    width: 60%;
    height: 100%;
}

.flex-container2 {
    display: flex;
}

.flex-item {
    font-size: 2rem;
    font-weight: 300;
    margin-right: 15px;
}

.city {
    margin-top: 33px;
}

.city h1 {
    font-size: 4rem;
}

.city small {
    font-size: 22px;
}

#temp {
    font-size: 9rem;
}

.title {
    margin: 30px 0px 360px 100px
}

.content {
    margin-left: 100px;
}

.search {
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
}

.search-left {
    /* margin-right: 15rem; */
    margin-top: 9px;
    font-size: 1rem;
}

input {
    background-color: transparent;
    border: none;
    border-bottom: 1px solid white;
    width: 21rem;
    font-size: 1rem;
}

::placeholder {
  color: white;
}

.right-side {
   backdrop-filter: blur(5px);
   height: 98vh;
   padding-left: 2rem;
}

.right-side img{
    float: right;
    height: 35px;
    width: 35px;
}

.search-right {
    width: 40px;
    height: 28px;
}

.cities h2 {
    margin: 2rem 0 2rem 4rem;
    font-size: 1.4rem;
}

.weather-details {
    margin-top: 2rem;
}

.weather-details h2 {
    margin-bottom: 1.5rem;
}

.weather-info {
    margin-bottom: 3rem;
    margin-right: 30px;
    display: flex;
    justify-content: space-between;
    font-size: 0.9rem;
}

